WIP: debugging dropdown of filter component

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=62a2f394c3059765d826",
+    "/css/app.css": "/css/app.css?id=831c71c276eba0917b42"
 }
