--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "postcss-nesting": "^7.0.1",
         "prettier": "^2.1.2",
         "resolve-url-loader": "^3.1.0",
+        "signature_pad": "^3.0.0-beta.4",
         "tailwindcss": "^1.3.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10",
