--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,12 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.2.14",
+        "intervention/image": "^2.5",
         "laravel/framework": "^8.0",
         "laravel/jetstream": "^1.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
+        "spatie/laravel-image-optimizer": "^1.6",
         "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
