feedback module complete

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=e3ad558e94a7eb18497e",
-    "/css/app.css": "/css/app.css?id=140b25fb6368cdbda9f8"
+    "/js/app.js": "/js/app.js?id=56a023e791d7129aaf5e",
+    "/css/app.css": "/css/app.css?id=9366f5f6e8ebf84daab5",
+    "/js/app.js.map": "/js/app.js.map?id=b97988273923605d7ffc",
+    "/css/app.css.map": "/css/app.css.map?id=d64cac63a9612b855d74"
 }
