--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=07cdaa4fdc3172ab1ae2",
-    "/css/app.css": "/css/app.css?id=c42a00821a12bb2d8753",
-    "/js/app.js.map": "/js/app.js.map?id=f9af333d60ffb679c70c",
-    "/css/app.css.map": "/css/app.css.map?id=7301f48bc4e4ba97d310"
+    "/js/app.js": "/js/app.js?id=c607f1886d4cf5a9feb3",
+    "/css/app.css": "/css/app.css?id=34dfb8cba13896f02450"
 }
