--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=c607f1886d4cf5a9feb3",
-    "/css/app.css": "/css/app.css?id=34dfb8cba13896f02450"
+    "/js/app.js": "/js/app.js?id=d837688ef527151637f9",
+    "/css/app.css": "/css/app.css?id=5d98255f9641ac3d7660",
+    "/js/app.js.map": "/js/app.js.map?id=8d9e2b45f5e21deea816",
+    "/css/app.css.map": "/css/app.css.map?id=a19290e5462dbc96ba08"
 }
