added services seeder; fixed other seeders

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=a78cff03d389296fdda0",
-    "/css/app.css": "/css/app.css?id=5d98255f9641ac3d7660",
-    "/js/app.js.map": "/js/app.js.map?id=af7cad2dd3f963c23ba8",
-    "/css/app.css.map": "/css/app.css.map?id=a19290e5462dbc96ba08"
+    "/js/app.js": "/js/app.js?id=ecfe248afdbdc38c55fd",
+    "/css/app.css": "/css/app.css?id=34dfb8cba13896f02450"
 }
