added services dropdown;\n updated feedback controller;\n updated seeders;\n fixed checkbox issue for other browsers

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=166b0715df0516ca319a",
-    "/css/app.css": "/css/app.css?id=34dfb8cba13896f02450"
+    "/js/app.js": "/js/app.js?id=7c90032e206f88e2f7b9",
+    "/css/app.css": "/css/app.css?id=9fba596fbaaa4ab23b76",
+    "/js/app.js.map": "/js/app.js.map?id=d73b9719f8468c43392f",
+    "/css/app.css.map": "/css/app.css.map?id=5ab5272c2622ca94f26f"
 }
