--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "postcss-import": "^12.0.1",
         "postcss-nesting": "^7.0.1",
         "prettier": "^2.1.2",
+        "pretty-checkbox-vue": "^1.1.9",
         "resolve-url-loader": "^3.1.0",
         "signature_pad": "^3.0.0-beta.4",
         "tailwindcss": "^1.3.0",
