--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=e311e386f77eed8cd983",
-    "/css/app.css": "/css/app.css?id=becb0b95176c5b58592e",
-    "/js/app.js.map": "/js/app.js.map?id=5d8273990e6e4ba4b12d",
-    "/css/app.css.map": "/css/app.css.map?id=213dc10f6fb510f9511a"
+    "/js/app.js": "/js/app.js?id=f55af947d9691c1be989",
+    "/css/app.css": "/css/app.css?id=76ca198c64ea9098c9b6"
 }
