--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=1a5855abf6fcc7cf5ea9",
-    "/css/app.css": "/css/app.css?id=63a46f937648b7f60d36"
+    "/js/app.js": "/js/app.js?id=65aee60a1cc37e66f090",
+    "/css/app.css": "/css/app.css?id=76aba68c592ebeb90573",
+    "/js/app.js.map": "/js/app.js.map?id=7ae504f7ddea10b722ae",
+    "/css/app.css.map": "/css/app.css.map?id=865cf502c42a0725d06a"
 }
