--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=3941c2d6bc12e90a8e07",
-    "/css/app.css": "/css/app.css?id=76aba68c592ebeb90573",
-    "/js/app.js.map": "/js/app.js.map?id=7e20d8b9a6b5b9fead11",
-    "/css/app.css.map": "/css/app.css.map?id=865cf502c42a0725d06a"
+    "/js/app.js": "/js/app.js?id=aa00f55969dd8b1b6cfe",
+    "/css/app.css": "/css/app.css?id=63a46f937648b7f60d36"
 }
