fixed wrong link @ Home.vue; fixed missing use statement in web.php

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=aa00f55969dd8b1b6cfe",
-    "/css/app.css": "/css/app.css?id=63a46f937648b7f60d36"
+    "/js/app.js": "/js/app.js?id=948c34011f32b2856292",
+    "/css/app.css": "/css/app.css?id=c3483f6f861bafc3b103",
+    "/js/app.js.map": "/js/app.js.map?id=b4a5b7135d43cb7f848b",
+    "/css/app.css.map": "/css/app.css.map?id=4c5053d0cd1ce90d9fad"
 }
