--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "tailwindcss": "^1.3.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10",
+        "vue2-datepicker": "^3.7.0",
         "ziggy-js": "^0.9.4"
     }
 }
