--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=948c34011f32b2856292",
-    "/css/app.css": "/css/app.css?id=c3483f6f861bafc3b103",
-    "/js/app.js.map": "/js/app.js.map?id=b4a5b7135d43cb7f848b",
-    "/css/app.css.map": "/css/app.css.map?id=4c5053d0cd1ce90d9fad"
+    "/js/app.js": "/js/app.js?id=e59c2b521cf0aede522c",
+    "/css/app.css": "/css/app.css?id=87a7acd11ca9106b0e7b"
 }
