--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=e59c2b521cf0aede522c",
-    "/css/app.css": "/css/app.css?id=87a7acd11ca9106b0e7b"
+    "/js/app.js": "/js/app.js?id=970d6c6d41f1d459b00e",
+    "/css/app.css": "/css/app.css?id=3822248c192d26a73854",
+    "/js/app.js.map": "/js/app.js.map?id=37a2ecef53c21dd9dd67",
+    "/css/app.css.map": "/css/app.css.map?id=e116264ae1ff719310ff"
 }
