--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=6620b3dbaf73da836b6b",
-    "/css/app.css": "/css/app.css?id=69b1a6297026fc9da532",
-    "/js/app.js.map": "/js/app.js.map?id=3bf6bfeeaea441596a98",
-    "/css/app.css.map": "/css/app.css.map?id=a27b845014c1cd8caff6"
+    "/js/app.js": "/js/app.js?id=eac5600f6018bdc2cdf4",
+    "/css/app.css": "/css/app.css?id=87a7acd11ca9106b0e7b"
 }
