--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=c4d4ed4b91b1480438a4",
-    "/css/app.css": "/css/app.css?id=87a7acd11ca9106b0e7b"
+    "/js/app.js": "/js/app.js?id=dbf664ff09099f73cf77",
+    "/css/app.css": "/css/app.css?id=1362899f90ab9833ae3f",
+    "/js/app.js.map": "/js/app.js.map?id=f4aca5034d9a8ca0e515",
+    "/css/app.css.map": "/css/app.css.map?id=93844d5ffcfc88d2e215"
 }
