--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=cd27672209d8818f183e",
-    "/css/app.css": "/css/app.css?id=6de8bc7073f38e2a5fb4",
-    "/js/app.js.map": "/js/app.js.map?id=938d9ad0edb4d414c45c",
-    "/css/app.css.map": "/css/app.css.map?id=a55298673fe9d1a2dff8"
+    "/js/app.js": "/js/app.js?id=f757f8899446d2627b98",
+    "/css/app.css": "/css/app.css?id=f8e96f1ed3d83ea25645"
 }
