--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
         "vue-template-compiler": "^2.6.10",
         "vue2-datepicker": "^3.7.0",
         "ziggy-js": "^0.9.4"
+    },
+    "dependencies": {
+        "puppeteer": "^5.5.0"
     }
 }
