--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=fa7ce6b0ad579e60a155",
-    "/css/app.css": "/css/app.css?id=f8e96f1ed3d83ea25645"
+    "/js/app.js": "/js/app.js?id=c01868bb0ae520585af6",
+    "/css/app.css": "/css/app.css?id=c96b383ff1f5e2a9c186",
+    "/js/app.js.map": "/js/app.js.map?id=36084f839fc9f35f0acd",
+    "/css/app.css.map": "/css/app.css.map?id=c770e718d891f4117b30"
 }
