--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=fe14c9940f5ae21121c3",
-    "/css/app.css": "/css/app.css?id=054c680be8487994ecdc"
+    "/js/app.js": "/js/app.js?id=337f3694a02ee27d9b8b",
+    "/css/app.css": "/css/app.css?id=18cfeaf1599dccc33111",
+    "/js/app.js.map": "/js/app.js.map?id=cb971cfebe4f55ea89ae",
+    "/css/app.css.map": "/css/app.css.map?id=885c4850a55cfc6f7712"
 }
