--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "laravel/jetstream": "^1.3",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
-        "spatie/browsershot": "^3.40",
+        "nesk/puphpeteer": "^2.0",
         "spatie/laravel-image-optimizer": "^1.6",
         "tightenco/ziggy": "^0.9.4"
     },
