--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,14 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "nesk/puphpeteer": "^2.0",
+        "spatie/browsershot": "^3.41",
         "spatie/laravel-image-optimizer": "^1.6",
         "tightenco/ziggy": "^0.9.4"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/sail": "^0.0.10",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3"
