--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "nesk/puphpeteer": "^2.0",
+        "spatie/browsershot": "^3.41",
         "spatie/laravel-image-optimizer": "^1.6",
         "tightenco/ziggy": "^0.9.4"
     },
