--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=2b10117c09326439de2e",
-    "/css/app.css": "/css/app.css?id=5172481d1608f6b2b266",
-    "/js/app.js.map": "/js/app.js.map?id=6f4a4996a3f8a19d4d20",
-    "/css/app.css.map": "/css/app.css.map?id=447dc94c9b71aa498fb0"
+    "/js/app.js": "/js/app.js?id=8df41aab54d92a9b9f97",
+    "/css/app.css": "/css/app.css?id=054c680be8487994ecdc"
 }
