fixes issue about portability. server should now run > php artisan ziggy:generate [32mFile generated![39m > npm run prod
> prod
> npm run production

> production
> cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js

[1m[33mwarn[39m[22m - Tailwind is not purging unused styles because no template paths have been provided.
[1m[33mwarn[39m[22m - If you have manually configured PurgeCSS outside of Tailwind or are deliberately not removing unused styles, set `purge: false` in your Tailwind config file to silence this warning.
[1m[33mwarn[39m[22m - https://tailwindcss.com/docs/controlling-file-size/#removing-unused-css

[1;1H[0J[42m[30m DONE [39m[49m [32mCompiled successfully in 24593ms[39m          [90m6:31:09 AM[39m

                                       [1mAsset[39m[22m       [1mSize[39m[22m  [1mChunks[39m[22m  [1m[39m[22m                       [1m[39m[22m       [1mChunk Names[39m[22m
                                [1m[32m/css/app.css[39m[22m   57.8 KiB      [1m37[39m[22m  [1m[32m[emitted][39m[22m                     /js/app
                            [1m[32m/css/app.css.map[39m[22m     55 KiB      [1m37[39m[22m  [1m[32m[emitted] [dev][39m[22m               /js/app
                                  [1m[32m/js/app.js[39m[22m    169 KiB      [1m37[39m[22m  [1m[32m[emitted][39m[22m                     /js/app
                      [1m[32m/js/app.js.LICENSE.txt[39m[22m  241 bytes        [1m[39m[22m  [1m[32m[emitted][39m[22m
                              [1m[32m/js/app.js.map[39m[22m    655 KiB      [1m37[39m[22m  [1m[32m[emitted] [dev][39m[22m               /js/app
         [1m[32mjs/0.js.map?id=9df47dd4eff910b0f198[39m[22m    165 KiB       [1m0[39m[22m  [1m[32m[emitted] [dev][39m[22m
             [1m[32mjs/0.js?id=9df47dd4eff910b0f198[39m[22m    148 KiB      

--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,15 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "prod": [
+            "php artisan ziggy:generate",
+            "npm run prod",
+            "php artisan storage:link",
+            "php artisan config:cache",
+            "chmod 777 -R storage/",
+            "chmod 777 -R bootstrap/cache/"
         ]
+
     }
 }
