--- a/docker-compose - Copy.yml
+++ b/docker-compose - Copy.yml
@@ -1,4 +1,3 @@
-# For more information: https://laravel.com/docs/sail
 version: '3'
 services:
     browserless:
@@ -13,12 +12,13 @@ services:
             - sail
         restart: always
     laravel.test:
+        container_name: "laravel.test"
         build:
-            context: ./vendor/laravel/sail/runtimes/7.4
+            context: ./docker/runtimes/7.4
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        image: sail-8.0/app
+        image: sail-7.4/app
         ports:
             - '${APP_PORT:-80}:80'
         environment:
@@ -26,11 +26,25 @@ services:
             LARAVEL_SAIL: 1
         volumes:
             - '.:/var/www/html'
+            - ~/.composer/docker-cache/:/root/.composer:cached
         networks:
             - sail
+        restart: always
         depends_on:
             - mysql
+            # - redis
+            # - selenium
+    
+    # selenium:
+    #     image: 'selenium/standalone-chrome'
+    #     volumes:
+    #         - '/dev/shm:/dev/shm'
+    #     networks:
+    #         - sail
+    #     depends_on:
+    #         - laravel.test
     mysql:
+        container_name: "mysql"
         image: 'mariadb:10.5.8'
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
@@ -44,11 +58,33 @@ services:
             - 'sailmysql:/var/lib/mysql'
         networks:
             - sail
-        healthcheck:
-          test: ["CMD", "mysqladmin", "ping"]
+        restart: always
+    # redis:
+    #     image: 'redis:alpine'
+    #     ports:
+    #         - '${FORWARD_REDIS_PORT:-6379}:6379'
+    #     volumes:
+    #         - 'sailredis:/data'
+    #     networks:
+    #         - sail
+    # memcached:
+    #     image: 'memcached:alpine'
+    #     ports:
+    #         - '11211:11211'
+    #     networks:
+    #         - sail
+    # mailhog:
+    #     image: 'mailhog/mailhog:latest'
+    #     ports:
+    #         - 1025:1025
+    #         - 8025:8025
+    #     networks:
+    #         - sail
 networks:
     sail:
         driver: bridge
 volumes:
     sailmysql:
+        driver: local
+    sailredis:
         driver: local
