--- a/composer.json
+++ b/composer.json
@@ -1,74 +1,75 @@
 {
-    "name": "laravel/laravel",
-    "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
-    "license": "MIT",
-    "require": {
-        "php": "^7.3",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "inertiajs/inertia-laravel": "^0.2.14",
-        "intervention/image": "^2.5",
-        "laravel/framework": "^8.0",
-        "laravel/jetstream": "^1.3",
-        "laravel/sanctum": "^2.6",
-        "laravel/tinker": "^2.0",
-        "nesk/puphpeteer": "^2.0",
-        "spatie/browsershot": "^3.41",
-        "spatie/laravel-image-optimizer": "^1.6",
-        "symfony/filesystem": "^5.2",
-        "tightenco/ziggy": "^0.9.4"
-    },
-    "require-dev": {
-      "roave/security-advisories": "dev-latest",
-      "barryvdh/laravel-ide-helper": "^2.12",
-        "doctrine/dbal": "^2.6",
-        "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
-        "laravel/sail": "^0.0.10",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
-        ]
+  "name": "akosiitey/cssm",
+  "type": "project",
+  "description": "Client Satisfaction Survey Management System",
+  "keywords": [
+    "framework",
+    "laravel"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": "^7.3",
+    "fideloper/proxy": "^4.2",
+    "fruitcake/laravel-cors": "^2.0",
+    "guzzlehttp/guzzle": "^7.0.1",
+    "inertiajs/inertia-laravel": "^0.2.14",
+    "intervention/image": "^2.5",
+    "laravel/framework": "^8.0",
+    "laravel/jetstream": "^1.3",
+    "laravel/sanctum": "^2.6",
+    "laravel/tinker": "^2.0",
+    "nesk/puphpeteer": "^2.0",
+    "spatie/browsershot": "^3.41",
+    "spatie/laravel-image-optimizer": "^1.6",
+    "symfony/filesystem": "^5.2",
+    "tightenco/ziggy": "^0.9.4",
+    "ext-zip": "*"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-latest",
+    "barryvdh/laravel-ide-helper": "^2.12",
+    "doctrine/dbal": "^2.6",
+    "facade/ignition": "^2.3.6",
+    "fzaninotto/faker": "^1.9.1",
+    "laravel/sail": "^0.0.10",
+    "mockery/mockery": "^1.3.1",
+    "nunomaduro/collision": "^5.0",
+    "phpunit/phpunit": "^9.3"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
     }
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate --ansi"
+    ]
+  }
 }
