updated local build for logo change

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=1ef0a36731d03e19b230",
-    "/css/app.css": "/css/app.css?id=db047e42e656d2daf3b7",
-    "/js/app.js.map": "/js/app.js.map?id=7d3bcacb74e06b721b5b",
-    "/css/app.css.map": "/css/app.css.map?id=47f6901e0405aec4894f"
+    "/js/app.js": "/js/app.js?id=7cfb2317f495ec8e6919",
+    "/css/app.css": "/css/app.css?id=c88baa446a8b98dc08a0"
 }
