build for heroku deploy

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=7cfb2317f495ec8e6919",
-    "/css/app.css": "/css/app.css?id=c88baa446a8b98dc08a0"
+    "/js/app.js": "/js/app.js?id=1b566506836b87ccc57a",
+    "/css/app.css": "/css/app.css?id=e5528c5e1779c3c2c1ac",
+    "/js/app.js.map": "/js/app.js.map?id=bd0bc77986b31254c899",
+    "/css/app.css.map": "/css/app.css.map?id=77d7ed887f236bcbb840"
 }
