--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
   "license": "MIT",
   "require": {
     "php": "^7.3",
+    "ext-pdo_sqlite": "^7.4",
+    "ext-zip": "*",
     "fideloper/proxy": "^4.2",
     "fruitcake/laravel-cors": "^2.0",
     "guzzlehttp/guzzle": "^7.0.1",
@@ -21,8 +23,7 @@
     "nesk/puphpeteer": "^2.0",
     "spatie/laravel-image-optimizer": "^1.6",
     "symfony/filesystem": "^5.2",
-    "tightenco/ziggy": "^0.9.4",
-    "ext-zip": "*"
+    "tightenco/ziggy": "^0.9.4"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
