--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "@fullhuman/postcss-purgecss": "^3.1.3",
-        "@inertiajs/inertia": "^0.11.0",
-        "@inertiajs/inertia-vue": "^0.4.3",
-        "axios": "^0.27.2",
-        "babel-eslint": "^10.1.0",
-        "chart.js": "^2.9.4",
-        "cross-env": "^7.0.3",
-        "eslint": "^5.16.0",
-        "eslint-config-prettier": "^6.15.0",
-        "eslint-import-resolver-webpack": "^0.12.2",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-prettier-vue": "^2.1.1",
-        "eslint-plugin-vue": "^6.2.2",
-        "laravel-jetstream": "^1.0.0",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.21",
-        "popper.js": "^1.16.1",
-        "portal-vue": "^2.1.7",
-        "postcss-import": "^12.0.1",
-        "postcss-loader": "^3.0.0",
-        "postcss-nesting": "^7.0.1",
-        "prettier": "^2.6.2",
-        "pretty-checkbox-vue": "^1.1.9",
-        "resolve-url-loader": "^3.1.4",
-        "signature_pad": "^3.0.0-beta.4",
-        "vue": "^2.6.14",
-        "vue-chartjs": "^3.5.1",
-        "vue-template-compiler": "^2.6.14",
-        "vue2-datepicker": "^3.10.4",
-        "ziggy-js": "^0.9.4"
-    },
-    "dependencies": {
-        "@nesk/puphpeteer": "^2.0.0",
-        "autoprefixer": "^9.8.8",
-        "postcss": "^7.0.39",
-        "puppeteer": "^14.1.0",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "postinstall": "php artisan ziggy:generate && npm run prod"
+  },
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier-vue": "^2.1.1",
+    "eslint-plugin-vue": "^6.2.2"
+  },
+  "dependencies": {
+    "ziggy-js": "^0.9.4",
+    "@nesk/puphpeteer": "^2.0.0",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "puppeteer": "^14.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+    "@fullhuman/postcss-purgecss": "^3.1.3",
+    "@inertiajs/inertia": "^0.11.0",
+    "@inertiajs/inertia-vue": "^0.4.3",
+    "axios": "^0.27.2",
+    "chart.js": "^2.9.4",
+    "cross-env": "^7.0.3",
+    "laravel-jetstream": "^1.0.0",
+    "laravel-mix": "^5.0.1",
+    "lodash": "^4.17.21",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-nesting": "^7.0.1",
+    "prettier": "^2.6.2",
+    "pretty-checkbox-vue": "^1.1.9",
+    "resolve-url-loader": "^3.1.4",
+    "signature_pad": "^3.0.0-beta.4",
+    "vue": "^2.6.14",
+    "vue-chartjs": "^3.5.1",
+    "vue-template-compiler": "^2.6.14",
+    "vue2-datepicker": "^3.10.4"
+  }
 }
