--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=20e198b74f2d76a33b94",
-    "/css/app.css": "/css/app.css?id=e5528c5e1779c3c2c1ac",
-    "/js/app.js.map": "/js/app.js.map?id=844c8d4dd7daf8273640",
-    "/css/app.css.map": "/css/app.css.map?id=77d7ed887f236bcbb840"
+    "/js/app.js": "/js/app.js?id=e165a238de13ac17ac1c",
+    "/css/app.css": "/css/app.css?id=c88baa446a8b98dc08a0"
 }
